--- a/4 Bim Natalia Dw1/Cliente/html/login.html
+++ b/4 Bim Natalia Dw1/Cliente/html/login.html
@@ -19,7 +19,7 @@
     <h2>Faça seu Login</h2>
     <form id="loginForm">
       <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="seu@email.com" pattern="^[a-zA-Z0-9._%+-]+@email\.com$" required>
+      <input type="email" id="email" placeholder="seu@email.com" required>
 
       <label for="senha">Senha:</label>
       <input type="password" id="senha" placeholder="Sua senha" required>
@@ -30,7 +30,7 @@
     </form>
   </div>
 
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 
 
 </body>
