--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <header class="top-bar">
     <div class="top-right-buttons">
-      <button onclick="window.location.href='menu.html'">Página inicial</button>
+      <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
     </div>
   </header>
 
