--- a/frontend/carrinho/carrinho.html
+++ b/frontend/carrinho/carrinho.html
@@ -11,7 +11,7 @@
 
   <header class="top-bar" id="header-carrinho">
     <div class="top-right-buttons">
-      <button onclick="window.location.href='menu.html'">Página inicial</button>
+      <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
     </div>
   </header>
 
