--- a/frontend/login/login.html
+++ b/frontend/login/login.html
@@ -26,7 +26,7 @@
 
       <button type="button" onclick="realizarLogin()">Entrar</button>
 
-      <span class="link-cadastro" onclick="window.location.href='cadastro.html'">Não tem login? Faça seu cadastro</span>
+      <a class="link-cadastro" href="../cadastro/cadastro.html">Não tem login? Faça seu cadastro</a>
     </form>
   </div>
 
