--- a/frontend/menu/menu.html
+++ b/frontend/menu/menu.html
@@ -12,7 +12,7 @@
 <header class="top-bar">
   <h1>Bem-vindo (a)!</h1>
   <div class="top-right-buttons" id="user-area">
-    <button onclick="window.location.href='./carrinho.html'">Ver Carrinho 🛒</button>
+  <button onclick="window.location.href='../carrinho/carrinho.html'">Ver Carrinho 🛒</button>
 <button id="loginButton" onclick="window.location.href='/login'">Login</button> 
  </div>
 </header>
