churras do narci - 1

--- a/frontend/produto/produto.html
+++ b/frontend/produto/produto.html
@@ -8,11 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+ 
 <header class="top-bar">
   <div class="top-right-buttons">
-    <button onclick="window.location.href='carrinho.html'">Ver carrinho 🛒</button>
-    <button onclick="window.location.href='menu.html'">Página inicial</button>
+    <button onclick="window.location.href='../carrinho/carrinho.html'">Ver carrinho 🛒</button>
+      <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
   </div>
 </header>
 
