--- a/frontend/carrinho/registroPedidos.html
+++ b/frontend/carrinho/registroPedidos.html
@@ -4,24 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Meus Pedidos</title>
+  
   <link rel="stylesheet" href="../../style.css">
+  
+  <link rel="stylesheet" href="registroPedidos.css">
 </head>
 <body>
+
 <header class="top-bar"> 
   <h1>Meus Pedidos</h1>
   <div class="top-right-buttons" id="user-area">
-          <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
+    <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
     <button onclick="window.location.href='../carrinho/carrinho.html'">Ver Carrinho 🛒</button>
     <button id="loginButton" onclick="window.location.href='/login'">Login</button>
   </div>
 </header>
 
-<main style="max-width: 1000px; margin: 40px auto;">
+<main>
   <section id="pedidos-lista">
-    <p>Carregando pedidos...</p>
+    <div class="loading-msg">Carregando seus pedidos e produtos...</div>
   </section>
 </main>
 
 <script src="registroPedidos.js"></script>
+
 </body>
 </html>
