--- a/frontend-Gerente/produto.html
+++ b/frontend-Gerente/produto.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Produto</title>
-  <link rel="stylesheet" href="produto.css">
+  <title>Produto - Gerente</title>
+  <link rel="stylesheet" href="../frontend/produto/produto.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
  
 <header class="top-bar">
   <div class="top-right-buttons">
-    <button onclick="window.location.href='../carrinho/carrinho.html'">Ver carrinho 🛒</button>
-      <button onclick="window.location.href='http://localhost:3001/menu'">Página inicial</button>
+    <button onclick="irParaCarrinho()">Ver carrinho 🛒</button>
+    <button onclick="irParaMenu()">Página inicial</button>
   </div>
 </header>
 
@@ -33,6 +33,7 @@
     </div>
   </section>
 
+  <script src="../context-helper.js"></script>
   <script src="produto.js"></script> 
 </body>
 </html>
