--- a/frontend-Gerente/cargo/cargo.html
+++ b/frontend-Gerente/cargo/cargo.html
@@ -37,8 +37,8 @@
                     <legend>Dados da Cargo</legend>
 
                     <div class="form-group">
-                        <label for="nome_cargo">Nome do cargo:</label>
-                        <input type="text" id="nome_cargo" name="nome_cargo" required>
+                        <label for="nomecargo">Nome do cargo:</label>
+                        <input type="text" id="nomecargo" name="nomecargo" required>
                     </div>  
                 </fieldset>
             </form>
@@ -67,7 +67,7 @@
 
     <div id="messageContainer" class="message-container"></div>
 
-    <script src="./cargo.js" defer></script>
+    <script src="cargo.js" defer></script>
 
 </body>
 
