04/12 aula ultimas alterações

--- a/frontend-Gerente/menu.html
+++ b/frontend-Gerente/menu.html
@@ -28,39 +28,33 @@
   <div id="gerenciamento" class="aba-conteudo aba-ativa-conteudo">
     <nav class="gerente-nav">
       <div class="gerente-menu-item">
-        <h3>📦 Produtos</h3>
-        <p>Gerenciar catálogo de produtos</p>
-        <button onclick="window.location.href='#'">Editar Produtos</button>
-      </div>
-
-      <div class="gerente-menu-item">
-        <h3>👥 Clientes</h3>
-        <p>Visualizar e gerenciar clientes</p>
-        <button onclick="window.location.href='#'">Gerenciar Clientes</button>
-      </div>
-
-      <div class="gerente-menu-item">
-        <h3>📋 Pedidos</h3>
+        <h3>📦 Pedidos</h3>
         <p>Acompanhar e processar pedidos</p>
-        <button onclick="window.location.href='#'">Ver Pedidos</button>
+        <button onclick="window.location.href='../pedido/pedido.html'">Editar Pedidos</button> 
+      </div>
+
+      <div class="gerente-menu-item">
+        <h3>👥 Pessoas</h3>
+        <p>Visualizar e gerenciar pessoas</p>
+        <button onclick="window.location.href='../pessoa/pessoa.html'">Gerenciar Pessoas</button>
+      </div>
+
+      <div class="gerente-menu-item">
+        <h3>📋 Cargos</h3>
+        <p>Visualizar e gerenciar cargos</p>
+        <button onclick="window.location.href='../cargo/cargo.html'">Ver Cargos</button>
       </div>
 
       <div class="gerente-menu-item">
         <h3>💳 Pagamentos</h3>
         <p>Controlar pagamentos recebidos</p>
-        <button onclick="window.location.href='#'">Ver Pagamentos</button>
-      </div>
-
-      <div class="gerente-menu-item">
-        <h3>👔 Funcionários</h3>
-        <p>Gerenciar equipe e cargos</p>
-        <button onclick="window.location.href='#'">Gerenciar Funcionários</button>
+        <button onclick="window.location.href='../forma_pagamento/forma_pagamento.html'">Ver Pagamentos</button>
       </div>
 
       <div class="gerente-menu-item">
         <h3>📊 Relatórios</h3>
         <p>Visualizar estatísticas e vendas</p>
-        <button onclick="window.location.href='#'">Ver Relatórios</button>
+        <button onclick="window.location.href='../relatorio/relatorio.html'">Ver Relatórios</button>
       </div>
     </nav>
   </div>
