--- a/frontend-Gerente/menu.html
+++ b/frontend-Gerente/menu.html
@@ -30,8 +30,8 @@
       <div class="gerente-menu-item">
         <h3>📦 Pedidos</h3>
         <p>Acompanhar e processar pedidos</p>
-        <button onclick="window.location.href='../pedido/pedido.html'">Editar Pedidos</button> 
-      </div>
+        <button onclick="window.location.href='/pedido/tela-edicao'">Editar Pedidos</button>       
+      </div> 
 
       <div class="gerente-menu-item">
         <h3>👥 Pessoas</h3>
