10/12- 2- problemas no servidor

--- a/frontend-Gerente/menu.html
+++ b/frontend-Gerente/menu.html
@@ -32,17 +32,17 @@
         <p>Acompanhar e processar pedidos</p>
         <button onclick="window.location.href='/pedido/tela-edicao'">Editar Pedidos</button>       
       </div> 
-
+ 
       <div class="gerente-menu-item">
         <h3>👥 Pessoas</h3>
         <p>Visualizar e gerenciar pessoas</p>
-        <button onclick="window.location.href='../pessoa/pessoa.html'">Gerenciar Pessoas</button>
+        <button onclick="window.location.href='/pessoa/tela-edicao'">Gerenciar Pessoas</button>
       </div>
 
       <div class="gerente-menu-item">
         <h3>📋 Cargos</h3>
         <p>Visualizar e gerenciar cargos</p>
-        <button onclick="window.location.href='../cargo/cargo.html'">Ver Cargos</button>
+        <button onclick="window.location.href='/cargo/tela-edicao'">Ver Cargos</button>
       </div>
 
       <div class="gerente-menu-item">
