--- a/frontend-Gerente/pessoa/pessoa.html
+++ b/frontend-Gerente/pessoa/pessoa.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD - Pessoa</title>
-    <link rel="stylesheet" href="./pessoa.css">
+    <link rel="stylesheet" href="/frontend-Gerente/pessoa/pessoa.css">
 </head>
-
+ 
 <body>
     <header>
         <h1>CRUD Pessoa</h1>
@@ -124,7 +124,7 @@
 
     <div id="messageContainer" class="message-container"></div>
 
-    <script src="./pessoa.js" defer></script>
+    <script src="/frontend-Gerente/pessoa/pessoa.js"></script>
 
 </body>
 
