--- a/frontend-Gerente/cargo/cargo.html
+++ b/frontend-Gerente/cargo/cargo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD - Cargo</title>
-    <link rel="stylesheet" href="cargo.css">
+    <link rel="stylesheet" href="/frontend-Gerente/cargo/cargo.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
     <div id="messageContainer" class="message-container"></div>
 
-    <script src="cargo.js" defer></script>
+    <script src="/frontend-Gerente/cargo/cargo.js"></script>
 
 </body>
 
