10/12 - 3 - funcionou esse desgraca de menu mais ou menos tambem inferno

--- a/frontend-Gerente/forma_pagamento/forma_pagamento.html
+++ b/frontend-Gerente/forma_pagamento/forma_pagamento.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD - Forma_pagamento</title>
-    <link rel="stylesheet" href="./forma_pagamento.css">
+    <link rel="stylesheet" href="/frontend-Gerente/forma_pagamento/forma_pagamento.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
     <div id="messageContainer" class="message-container"></div>
 
-    <script src="./forma_pagamento.js" defer></script>
+    <script src="/frontend-Gerente/forma_pagamento/forma_pagamento.js"></script>
 
 </body>
 
