11/12 - 2 - enrrosco crud pessoa

--- a/frontend-Gerente/pessoa/pessoa.html
+++ b/frontend-Gerente/pessoa/pessoa.html
@@ -37,26 +37,26 @@
                     <legend>Dados da Pessoa</legend>
 
                     <div class="form-group">
-                        <label for="nome_pessoa">Nome:</label>
-                        <input type="text" id="nome_pessoa" name="nome_pessoa" required>
+                        <label for="nomePessoa">Nome:</label>
+                        <input type="text" id="nomePessoa" name="nomePessoa" required>
                     </div>
                     <div class="form-group">
-                        <label for="data_nascimento">Data de Nascimento:</label>
-                        <input type="date" id="data_nascimento" name="data_nascimento">
+                        <label for="dataNascimentoPessoa">Data de Nascimento:</label>
+                        <input type="date" id="dataNascimentoPessoa" name="dataNascimentoPessoa">
                     </div>
                     <div class="form-group">
-                        <label for="endereco_pessoa">Endereço:</label>
-                        <input type="text" id="endereco_pessoa" name="endereco_pessoa" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="senha_pessoa">Senha:</label>
-                        <input type="password" id="senha_pessoa" name="senha_pessoa" required>
+                        <label for="EnderecoIdEndereco">Endereço:</label>
+                        <input type="text" id="EnderecoIdEndereco" name="EnderecoIdEndereco" required>
                     </div>
 
                     <div class="form-group">
-                        <label for="email_pessoa">Email:</label>
-                        <input type="email" id="email_pessoa" name="email_pessoa" required>
+                        <label for="senhaPessoa">Senha:</label>
+                        <input type="password" id="senhaPessoa" name="senhaPessoa" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="emailPessoa">Email:</label>
+                        <input type="email" id="emailPessoa" name="emailPessoa" required>
                     </div>
 
                 </fieldset>
@@ -65,36 +65,33 @@
                 <div class="funcionario">
                     <input type="checkbox" id="checkboxFuncionario" name="checkboxFuncionario">
                     <span id="spanFuncionario">Funcionário</span>
-                    <select id="cargo_id_cargo" name="cargo_id_cargo" style="display: inline;">
+                    <select id="CargosIdCargo" name="CargosIdCargo" style="display: inline;">
                         <option value="">Cargo</option>
                     </select>
-                    <label for="salario_funcionario">  Salário</label>
-                    <input type="number" id="salario_funcionario" name="salario_funcionario" placeholder="Salário"
+                    <label for="salario">  Salário</label>
+                    <input type="number" id="salario" name="salario" placeholder="Salário"
                         style="display: inline;">
-                        <label for="porcentagem_comissao_funcionario"> Comissão</label>
-                    <input type="text" id="porcentagem_comissao_funcionario" name="porcentagem_comissao_funcionario"
-                        placeholder="Porcentagem Comissão" style="display: inline;">
 
                 </div>
                 <div class="cliente">
                     <input type="checkbox" id="checkboxCliente" name="checkboxCliente">
                     <span id="spanCliente">Cliente</span>
-                    <label for="renda_cliente">  Renda mensal</label>
-                    <input type="number" id="renda_cliente" name="renda_cliente" placeholder="Renda mensal do cliente"
+                    <label for="rendaCliente">  Renda mensal</label>
+                    <input type="number" id="rendaCliente" name="rendaCliente" placeholder="Renda mensal do cliente"
                         style="display: inline;">
-                    <label for="data_cadastro_cliente">Data de cadastro</label>
-                    <input type="date" id="data_cadastro_cliente" name="data_cadastro_cliente"
+                    <label for="dataDeCadastroCliente">Data de cadastro</label>
+                    <input type="date" id="dataDeCadastroCliente" name="dataDeCadastroCliente"
                         placeholder="Data de cadastro do cliente" style="display: inline;">
                 </div>
             </div>
         </section>
 
         <!--  //cpf_pessoa, 
-                      nome_pessoa, 
-                      data_nascimento_pessoa,
-                      endereco_pessoa,
-                      senha_pessoa, 
-                      email_pessoa 
+                      nomePessoa, 
+                      dataNascimentoPessoa_pessoa,
+                      EnderecoIdEndereco,
+                      senhaPessoa, 
+                      emailPessoa 
                       -->
 
         <section class="list-section">
