crud cargo funcionando 100%

--- a/frontend-Gerente/cargo/cargo.html
+++ b/frontend-Gerente/cargo/cargo.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD - Cargo</title>
     <link rel="stylesheet" href="/frontend-Gerente/cargo/cargo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div id="messageContainer" class="message-container"></div>
+
     <header>
         <h1>CRUD Cargo</h1>
     </header>
@@ -54,8 +57,7 @@
                         </tr>
                     </thead>
                     <tbody id="cargosTableBody">
-                        <!-- Dados serão carregados dinamicamente -->
-                    </tbody>
+                        </tbody>
                 </table>
             </div>
         </section>
@@ -64,8 +66,6 @@
     <footer>
         <p>&copy; 2025 CRUD Cargo</p>
     </footer>
-
-    <div id="messageContainer" class="message-container"></div>
 
     <script src="/frontend-Gerente/cargo/cargo.js"></script>
 
