bizarro tudo deu certo

--- a/frontend-Gerente/menu.html
+++ b/frontend-Gerente/menu.html
@@ -45,8 +45,14 @@
 
       <div class="gerente-menu-item">
         <h3>💳 Pagamentos</h3>
-        <p>Controlar pagamentos recebidos</p>
-        <button onclick="window.location.href='/forma_pagamento/tela-edicao'">Ver Pagamentos</button>
+        <p>Controlar forma de pagamento</p>
+        <button onclick="window.location.href='/formadepagamento/tela-edicao'">Ver Pagamentos</button>
+      </div>
+
+      <div class="gerente-menu-item">
+        <h3>🛍️ Produtos</h3>
+        <p>Controlar produtos</p>
+        <button onclick="window.location.href='/produto/tela-edicao'">Ver Produtos</button>
       </div>
 
       <div class="gerente-menu-item">
