5 cruds e 2 relatorios funcionando

--- a/frontend-Gerente/menu.html
+++ b/frontend-Gerente/menu.html
@@ -55,11 +55,16 @@
         <button onclick="window.location.href='/produto/tela-edicao'">Ver Produtos</button>
       </div>
 
-      <div class="gerente-menu-item">
-        <h3>📊 Relatórios</h3>
-        <p>Visualizar estatísticas e vendas</p>
-        <button onclick="window.location.href='../relatorio/relatorio.html'">Ver Relatórios</button>
-      </div>
+<div class="gerente-menu-item">
+  <h3>📊 Relatório de Vendas</h3>
+  <p>Visualizar estatísticas e vendas</p>
+  <button onclick="window.location.href='/relatorioVendas/vendas'">Ver Relatório</button>
+</div>
+
+        <div class="gerente-menu-item">
+        <h3>📊 Relatório de Clientes</h3>
+        <p>Visualizar estatísticas e novos clientes</p>
+<button onclick="window.location.href='/relatorioClientes/clientes'">Ver Relatório</button>      </div>
     </nav>
   </div>
 
