--- a/frontend-Gerente/carrinho.html
+++ b/frontend-Gerente/carrinho.html
@@ -69,7 +69,7 @@
         // --- CAMINHO DO GERENTE (Arquivo Físico) ---
         // Sai de 'carrinho', sai de 'frontend', entra em 'frontend-Gerente'
         console.log("Redirecionando para Menu Gerente (Estático)");
-        window.location.href = '../../frontend-Gerente/menu.html';
+          window.location.href = `${HOST_BACKEND}/frontend-Gerente/menu.html`;
     } else {
         // --- CAMINHO DO CLIENTE (Rota do Backend) ---
         // Volta para o menu padrão que passa pelo controller
