--- a/frontend-Gerente/menuGerente/menuGerente.html
+++ b/frontend-Gerente/menuGerente/menuGerente.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Menu Gerente - Nail Polish</title>
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="/frontend-Gerente/menuGerente/menuGerente.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -70,7 +70,7 @@
 </main>
 
 <script src="../context-helper.js"></script>
-<script src="menu.js"></script> 
+<script src="/frontend-Gerente/menuGerente/menuGerente.js"></script> 
 
 </body>
 </html>
