--- a/frontend-Gerente/produtoGerente/produtoGerente.html
+++ b/frontend-Gerente/produtoGerente/produtoGerente.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Produto - Gerente</title>
-  <link rel="stylesheet" href="../frontend/produto/produto.css">
+  <link rel="stylesheet" href="/frontend-Gerente/produtoGerente/produtoGerente.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,6 +34,6 @@
   </section>
 
   <script src="../context-helper.js"></script>
-  <script src="produto.js"></script> 
+  <script src="/frontend-Gerente/produtoGerente/produtoGerente.js"></script> 
 </body>
 </html>
