war is overrrrrrrrrrrrrrrrrrrrrr

--- a/frontend-Gerente/menuGerente/menuGerente.html
+++ b/frontend-Gerente/menuGerente/menuGerente.html
@@ -12,6 +12,7 @@
 <header class="top-bar">
   <h1>👑 Menu Gerente</h1>
   <div class="top-right-buttons" id="user-area">
+    <button id="btn-meus-pedidos">Meus Pedidos 📋</button>
     <button id="btn-carrinho">Ver Carrinho 🛒</button>
     <button id="btn-logout-top">Sair</button>
   </div>
@@ -49,16 +50,16 @@
         <button onclick="window.location.href='/produto/tela-edicao'">Ver Produtos</button>
       </div>
 
-<div class="gerente-menu-item">
-  <h3>📊 Relatório de Vendas</h3>
-  <p>Visualizar estatísticas e vendas</p>
-  <button onclick="window.location.href='/relatorioVendas/vendas'">Ver Relatório</button>
-</div>
+      <div class="gerente-menu-item">
+        <h3>📊 Relatório de Vendas</h3>
+        <p>Visualizar estatísticas e vendas</p>
+        <button onclick="window.location.href='/relatorioVendas/vendas'">Ver Relatório</button>
+      </div>
 
         <div class="gerente-menu-item">
         <h3>📊 Relatório de Clientes</h3>
         <p>Visualizar estatísticas e novos clientes</p>
-<button onclick="window.location.href='/relatorioClientes/clientes'">Ver Relatório</button>      </div>
+        <button onclick="window.location.href='/relatorioClientes/clientes'">Ver Relatório</button>      </div>
     </nav>
   </div>
 
